<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.ikodio.employeemanager.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/employeeListFragment"
        android:name="com.ikodio.employeemanager.ui.employee.EmployeeListFragment"
        android:label="@string/nav_employees" />

    <fragment
        android:id="@+id/attendanceFragment"
        android:name="com.ikodio.employeemanager.ui.attendance.AttendanceFragment"
        android:label="@string/nav_attendance" />

    <fragment
        android:id="@+id/leaveFragment"
        android:name="com.ikodio.employeemanager.ui.leave.LeaveFragment"
        android:label="@string/nav_leave" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ikodio.employeemanager.ui.profile.ProfileFragment"
        android:label="@string/nav_profile" />

</navigation>
